--- a/front/app.yaml
+++ b/front/app.yaml
@@ -4,7 +4,7 @@ env: flex
 runtime_config:
   python_version: 3.12
 
-entrypoint: streamlit run streamlit-app.py --server.port $PORT
+entrypoint: streamlit run app.py --server.port $PORT
 
 automatic_scaling:
   min_num_instances: 1
