--- a/front/app.yaml
+++ b/front/app.yaml
@@ -2,7 +2,8 @@ runtime: python
 env: flex
 
 runtime_config:
-  python_version: 3.12
+  operating_system: "ubuntu22"
+  python_version: "3.12"
 
 entrypoint: streamlit run app.py --server.port $PORT
 
