--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,12 @@
 # Byte-compiled / optimized / DLL files
+
 __pycache__/
 *.py[cod]
 *$py.class
 
 **.ipynb_checkpoints
 data
+creds
 
 # C extensions
 *.so
