--- a/front/app.yaml
+++ b/front/app.yaml
@@ -1,11 +1,9 @@
 runtime: python
-env: flex
+env: standard
 
-runtime_config:
-  operating_system: "ubuntu22"
-  python_version: "3.12"
+runtime: python312
 
-entrypoint: streamlit run app.py --server.port $PORT
+entrypoint: entrypoint: gunicorn -b 0.0.0.0:$PORT main:server
 
 automatic_scaling:
   min_num_instances: 1
