--- a/front/app.yaml
+++ b/front/app.yaml
@@ -1,10 +1,13 @@
-runtime: python
 env: standard
-
 runtime: python312
 
 entrypoint: gunicorn -b 0.0.0.0:$PORT app:srv
 
-automatic_scaling:
-  min_num_instances: 1
-  max_num_instances: 15
+basic_scaling:
+    max_instances: 1
+    idle_timeout: 2m
+
+resources:
+    cpu: 1
+    memory_gb: 1
+    disk_size_gb: 10
