--- a/front/app.yaml
+++ b/front/app.yaml
@@ -1,7 +1,7 @@
 env: standard
 runtime: python312
 
-entrypoint: gunicorn -b 0.0.0.0:$PORT app:srv
+entrypoint: gunicorn -b 0.0.0.0:8080 layouts:server
 
 basic_scaling:
     max_instances: 1
